--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -20,14 +20,15 @@
     &__box {
         width: 200px;
         height: 200px;
-        background: green;
-        border: 1px solid blue;
+        background: orange;
+        border: 1px solid black;
 
         &--square {
             width: 30px;
             height: 30px;
             @extend .bold;
         }
+
         &-content {
             &--paragraf {
                 color: red;
