--- a/src/sass/square.css
+++ b/src/sass/square.css
@@ -1,3 +1,46 @@
+.about {
+  width: 1600px;
+  height: 760px;
+  float: left; }
+
+.header {
+  width: 1600px;
+  height: 270px;
+  float: left;
+  background-color: aqua; }
+  .header__title {
+    width: 460px;
+    height: 100px;
+    float: left;
+    margin-left: 580px;
+    margin-top: 85px;
+    background-color: red; }
+
+.main {
+  width: 1600px;
+  height: 400px;
+  float: left; }
+  .main__containerImg {
+    width: 550px;
+    height: 400px;
+    float: left;
+    margin-left: 200px;
+    margin-right: 50px;
+    background-color: gold; }
+  .main__containerText {
+    width: 550px;
+    height: 400px;
+    float: left;
+    margin-left: 50px;
+    margin-right: 200px;
+    background-color: gold; }
+
+.footer {
+  width: 1600px;
+  height: 90px;
+  float: left;
+  background-color: aqua; }
+
 .container {
   width: 901px;
   height: 600px;
@@ -37,7 +80,7 @@
     border-top: solid 1px red; }
   .container .border_left {
     border-left: solid 1px red; }
-  .container .header {
+  .container .title {
     width: 270px;
     height: 85px;
     float: left;
