--- a/src/sass/square.css
+++ b/src/sass/square.css
@@ -7,14 +7,15 @@
   width: 1600px;
   height: 270px;
   float: left;
-  background-color: aqua; }
+  background-color: white; }
   .header__title {
     width: 460px;
     height: 100px;
     float: left;
     margin-left: 580px;
     margin-top: 85px;
-    background-color: red; }
+    background-color: white;
+    text-align: center; }
 
 .main {
   width: 1600px;
@@ -26,7 +27,7 @@
     float: left;
     margin-left: 200px;
     margin-right: 50px;
-    background-color: gold; }
+    background-color: white; }
   .main__containerText {
     width: 550px;
     height: 400px;
@@ -39,7 +40,7 @@
   width: 1600px;
   height: 90px;
   float: left;
-  background-color: aqua; }
+  background-color: white; }
 
 .container {
   width: 901px;
