--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -8,14 +8,15 @@
     width: 1600px;
     height: 270px;
     float: left;
-    background-color: aqua;
+    background-color: white;
     &__title {
         width: 460px;
         height: 100px;
         float: left;
         margin-left: 580px;
         margin-top: 85px;
-        background-color: red;
+        background-color: white;
+        text-align: center;
     }
 }
 
@@ -29,7 +30,7 @@
         float: left;
         margin-left: 200px;
         margin-right: 50px;
-        background-color: gold;
+        background-color: white;
     }
     &__containerText {
         width: 550px;
@@ -45,7 +46,7 @@
     width: 1600px;
     height: 90px;
     float: left;
-    background-color: aqua;
+    background-color: white;
 }
 
 
