--- a/src/sass/square.css
+++ b/src/sass/square.css
@@ -15,7 +15,8 @@
     margin-left: 580px;
     margin-top: 85px;
     background-color: white;
-    text-align: center; }
+    text-align: center;
+    opacity: 0.9; }
 
 .main {
   width: 1600px;
@@ -34,7 +35,48 @@
     float: left;
     margin-left: 50px;
     margin-right: 200px;
-    background-color: gold; }
+    background-color: white; }
+  .main .paragraph {
+    width: 450px;
+    height: 180px;
+    float: left;
+    background-color: white;
+    margin-left: 50px;
+    margin-right: 50px;
+    font-family: sans-serif;
+    font-size: 15px;
+    color: grey;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    opacity: 0.8; }
+  .main .button {
+    width: 550px;
+    height: 120px;
+    float: left;
+    background-color: white; }
+  .main .icon {
+    width: 550px;
+    height: 40px;
+    float: left;
+    background-color: white;
+    text-align: center;
+    color: red;
+    margin-top: 60px;
+    letter-spacing: 3px;
+    font-size: 18px;
+    opacity: 0.9; }
+  .main .readMore {
+    width: 120px;
+    height: 40px;
+    float: left;
+    background-color: red;
+    color: white;
+    font-family: sans-serif;
+    border: none;
+    cursor: pointer;
+    margin-left: 215px;
+    margin-top: 40px;
+    opacity: 0.9; }
 
 .footer {
   width: 1600px;
