--- a/src/sass/carousel.css
+++ b/src/sass/carousel.css
@@ -2,25 +2,29 @@
   width: 1400px;
   height: 800px;
   float: left;
-  background-color: red; }
+  background-color: white; }
   .gallery__button-container {
     width: 5%;
     height: 90%;
     float: left;
-    background-color: green;
+    background-color: white;
     position: relative; }
     .gallery__button-container__button {
       height: 50px;
       width: 50px;
-      background-color: aqua;
+      background-color: darkorange;
       position: absolute;
       top: 50%;
-      transform: translate(0, -50%); }
+      transform: translate(0, -50%);
+      margin-left: 10px;
+      text-align: center;
+      font-size: 50px;
+      border-radius: 50%; }
   .gallery__image {
     width: 90%;
     height: 90%;
     float: left;
-    background-color: yellow; }
+    background-color: white; }
     .gallery__image-item {
       width: 100%;
       height: 100%;
@@ -31,4 +35,4 @@
     width: 100%;
     height: 10%;
     float: left;
-    background-color: orange; }
+    background-color: darkorange; }
