--- a/src/sass/carousel.css
+++ b/src/sass/carousel.css
@@ -1,18 +1,18 @@
 .gallery {
-  width: 1400px;
+  width: 1600px;
   height: 800px;
   float: left;
-  background-color: white; }
+  background-color: #ff6600; }
   .gallery__button-container {
     width: 5%;
     height: 90%;
     float: left;
-    background-color: white;
+    background-color: #ff6600;
     position: relative; }
     .gallery__button-container__button {
       height: 50px;
       width: 50px;
-      background-color: darkorange;
+      background-color: white;
       position: absolute;
       top: 50%;
       transform: translate(0, -50%);
@@ -24,7 +24,7 @@
     width: 90%;
     height: 90%;
     float: left;
-    background-color: white; }
+    background-color: #ff6600; }
     .gallery__image-item {
       width: 100%;
       height: 100%;
@@ -32,7 +32,15 @@
       .gallery__image-item--active {
         display: block; }
   .gallery__indicators {
-    width: 100%;
+    width: 900px;
     height: 10%;
     float: left;
-    background-color: darkorange; }
+    background-color: #ff6600;
+    margin-left: 700px; }
+    .gallery__indicators__button {
+      width: 40px;
+      height: 40px;
+      float: left;
+      background-color: white;
+      border-radius: 50%;
+      margin-top: 20px; }
