--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -1,3 +1,4 @@
+//   --About--
 .about {
     width: 1600px;
     float: left;
@@ -72,7 +73,7 @@
         font-size: 18px;
         opacity: 0.9;
     }
-    .readMore{
+    .readMore {
         width: 120px;
         height: 40px;
         float: left;
@@ -95,17 +96,35 @@
 }
 
 
+//   --Menu--
+.menu {
+    width: 1600px;
+    height: 900px;
+    float: left;
+    background-color: white;
+}
 
+.menuText {
+    width: 1600px;
+    height: 100px;
+    float: left;
+    background-color: white;
+    text-align: center;
+    opacity: 0.9;
+    margin-top: 50px;
+}
 
 .container {
-    width: 901px;
-    height: 600px;
+    width: 751px;
+    height: 500px;
     background-color: white;
     float: left;
+    margin-left: 200px;
+    margin-top: 150px;
 
     &__box {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 250px;
         background-color: white;
         float: left;
         position: relative;
@@ -152,8 +171,8 @@
         border-left: solid 1px red;
     }
     .title {
-        width: 270px;
-        height: 85px;
+        width: 220px;
+        height: 75px;
         float: left;
         z-index: 6;
         padding-top: 15px;
@@ -167,8 +186,8 @@
     }
 
     .text {
-        width: 250px;
-        height: 200px;
+        width: 195px;
+        height: 180px;
         float: left;
         z-index: 6;
         padding-left: 30px;
@@ -176,4 +195,65 @@
         font-family: sans-serif;
         opacity: 0.8;
     }
+}
+
+.menuRight {
+    width: 449px;
+    height: 650px;
+    float: left;
+    background-color: red;
+
+    &__top {
+        width: 429px;
+        height: 100px;
+        float: left;
+        letter-spacing: 2px;
+        font-family:serif;
+        font-size: 35px;
+        color: white;
+        margin-left: 20px;
+    }
+    &__text {
+        width: 429px;
+        height: 150px;
+        float: left;
+        font-family: sans-serif;
+        color: white;
+        margin-left: 20px;
+        font-size: 15px;
+        opacity: 0.8;
+        letter-spacing: 1px;
+        line-height: 1.2;
+    }
+    &__button {
+        width: 449px;
+        height: 50px;
+        float: left;
+    }
+    &__bottom {
+        width: 449px;
+        height: 50px;
+        float: left;
+        letter-spacing: 2px;
+        font-family:serif;
+        color: white;
+        margin-left: 20px;
+    }
+    &__list {
+        width: 449px;
+        height: 300px;
+        float: left;
+        background-color: aqua;
+    }
+}
+.menuButton{
+        width: 200px;
+        height: 40px;
+        float: left;
+        background-color: white;
+        font-family: sans-serif;
+        cursor: pointer;
+        border-radius: 5px;
+        margin-left: 125px;
+        color: black;
 }
