--- a/src/sass/carousel.css
+++ b/src/sass/carousel.css
@@ -2,12 +2,12 @@
   width: 1600px;
   height: 800px;
   float: left;
-  background-color: #ff6600; }
+  background-color: red; }
   .gallery__button-container {
     width: 5%;
     height: 90%;
     float: left;
-    background-color: #ff6600;
+    background-color: red;
     position: relative; }
     .gallery__button-container__button {
       height: 50px;
@@ -24,7 +24,7 @@
     width: 90%;
     height: 90%;
     float: left;
-    background-color: #ff6600; }
+    background-color: red; }
     .gallery__image-item {
       width: 100%;
       height: 100%;
@@ -32,11 +32,11 @@
       .gallery__image-item--active {
         display: block; }
   .gallery__indicators {
-    width: 900px;
+    width: 850px;
     height: 10%;
     float: left;
-    background-color: #ff6600;
-    margin-left: 700px; }
+    background-color: red;
+    margin-left: 730px; }
     .gallery__indicators__button {
       width: 40px;
       height: 40px;
