--- a/src/sass/carousel.scss
+++ b/src/sass/carousel.scss
@@ -2,14 +2,14 @@
     width: 1600px;
     height: 800px;
     float: left;
-    background-color: #ff6600;
+    background-color: red;
 
     &__button {
         &-container {
             width: 5%;
             height: 90%;
             float: left;
-            background-color: #ff6600;
+            background-color: red;
             position: relative;
 
             &__button {
@@ -31,7 +31,7 @@
         width: 90%;
         height: 90%;
         float: left;
-        background-color: #ff6600;
+        background-color: red;
         &-item {
             width: 100%;
             height: 100%;
@@ -44,11 +44,11 @@
     }
 
     &__indicators {
-        width: 900px;
+        width:850px;
         height: 10%;
         float: left;
-        background-color: #ff6600;
-        margin-left: 700px;
+        background-color: red;
+        margin-left: 730px;
         &__button{
             width: 40px;
             height: 40px;
