--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -198,13 +198,13 @@
 }
 
 .menuRight {
-    width: 449px;
+    width: 380px;
     height: 650px;
     float: left;
     background-color: red;
 
     &__top {
-        width: 429px;
+        width: 360px;
         height: 100px;
         float: left;
         letter-spacing: 2px;
@@ -214,46 +214,47 @@
         margin-left: 20px;
     }
     &__text {
-        width: 429px;
+        width: 360px;
         height: 150px;
         float: left;
         font-family: sans-serif;
         color: white;
         margin-left: 20px;
         font-size: 15px;
-        opacity: 0.8;
         letter-spacing: 1px;
         line-height: 1.2;
     }
     &__button {
-        width: 449px;
+        width: 360px;
         height: 50px;
         float: left;
+        margin-left: 20px;
     }
     &__bottom {
-        width: 449px;
+        width: 360px;
         height: 50px;
         float: left;
         letter-spacing: 2px;
         font-family:serif;
         color: white;
         margin-left: 20px;
+        font-weight: bold;
     }
     &__list {
-        width: 449px;
+        width: 340px;
         height: 300px;
         float: left;
-        background-color: aqua;
+        margin-left: 20px;
+        color: white;
+        font-family: sans-serif;
     }
 }
-.menuButton{
-        width: 200px;
+.buttonKocki{
+        width: 260px;
         height: 40px;
         float: left;
         background-color: white;
         font-family: sans-serif;
+        border: none;
         cursor: pointer;
-        border-radius: 5px;
-        margin-left: 125px;
-        color: black;
 }
