--- a/src/sass/carousel.scss
+++ b/src/sass/carousel.scss
@@ -23,6 +23,7 @@
                 text-align: center;
                 font-size: 50px;
                 border-radius: 50%;
+                cursor: pointer;
             }
         }
     }
