--- a/src/sass/tiles.scss
+++ b/src/sass/tiles.scss
@@ -1,19 +1,37 @@
-.grid-item{
-width: 100px;
-}
 .grid-item {
-    width: 150px;
+    width: 100px;
+}
+
+.grid-item {
+    width: 300px;
     border-radius: 3px;
     background-color: #3d1e37;
 }
 
-.brickContainer{
-    position: relative;
-    width: 960px;
-    height: 1001px;
+.brickContainer {
+    width: 1200px;
+    height: 750px;
     float: left;
+    margin-left: 200px;
+    margin-top: 100px;
 }
 
-.clearfix{
- clear: both;
+.clearfix {
+    clear: both;
+}
+
+.brick {
+    width: 1600px;
+    height: 900px;
+    float: left;
+
+    &__title {
+        width: 1600px;
+        height: 100px;
+        float: left;
+        background-color: white;
+        text-align: center;
+        opacity: 0.9;
+        margin-top: 50px;
+    }
 }
