--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -208,7 +208,7 @@
         height: 100px;
         float: left;
         letter-spacing: 2px;
-        font-family:serif;
+        font-family: serif;
         font-size: 35px;
         color: white;
         margin-left: 20px;
@@ -235,7 +235,7 @@
         height: 50px;
         float: left;
         letter-spacing: 2px;
-        font-family:serif;
+        font-family: serif;
         color: white;
         margin-left: 20px;
         font-weight: bold;
@@ -249,12 +249,76 @@
         font-family: sans-serif;
     }
 }
-.buttonKocki{
-        width: 260px;
+
+.buttonKocki {
+    width: 260px;
+    height: 40px;
+    float: left;
+    background-color: white;
+    font-family: sans-serif;
+    border: none;
+    cursor: pointer;
+}
+
+.reservation {
+    width: 1600px;
+    height: 900px;
+    float: left;
+    background-color: white;
+
+    &__title {
+        width: 460px;
+        height: 100px;
+        float: left;
+        margin-left: 580px;
+        margin-top: 85px;
+        background-color: white;
+        text-align: center;
+        opacity: 0.9;
+    }
+    &__container{
+        width: 1200px;
+        height: 700px;
+        float: left;
+        margin-left: 200px;
+        background-image: url(../img/Signatures-web-1200x700.jpg);
+}
+    &__smallContainer{
+        width: 270px;
+        height: 30px;
+        margin-top: 60px;
+        margin-left: 75px;
+        float: left;
+        border: white 1px solid;
+        padding-top: 30px;
+        padding-left: 30px;
+    }
+    &__bigContainer{
+        width: 1020px;
+        height: 220px;
+        margin-top: 60px;
+        margin-left: 75px;
+        float: left;
+        border: white 1px solid;
+        padding-top: 30px;
+        padding-left: 30px;
+    }
+    &__button{
+        width: 120px;
+        height: 40px;
+        margin-top: 55px;
+        margin-left: 540px;
+        float: left;
+    }
+}
+.reservationB{
+        width: 120px;
         height: 40px;
         float: left;
-        background-color: white;
+        background-color: red;
+        color: white;
         font-family: sans-serif;
         border: none;
         cursor: pointer;
+        opacity: 0.9;
 }
