--- a/src/sass/square.css
+++ b/src/sass/square.css
@@ -325,3 +325,97 @@
     font-size: 20px;
     font-family: 'Source Sans Pro', sans-serif;
     text-indent: 20px; }
+
+.contact {
+  width: 1600px;
+  height: 1000px;
+  float: left;
+  background-color: white; }
+  .contact__title {
+    width: 1400px;
+    height: 100px;
+    float: left;
+    margin-left: 200px;
+    font-family: 'Anton', sans-serif;
+    font-size: 40px;
+    text-decoration: underline red; }
+  .contact__containerLeft {
+    width: 440px;
+    height: 800px;
+    float: left;
+    margin-left: 200px;
+    margin-top: 50px;
+    background-color: white;
+    border: 5px solid red; }
+  .contact__containerRight {
+    width: 900px;
+    height: 700px;
+    float: left;
+    margin-left: 50px;
+    margin-top: 100px;
+    background-image: url(../img/mapa-huelva.jpg); }
+  .contact__contactRight {
+    width: 300px;
+    height: 500px;
+    float: left;
+    margin-left: 300px;
+    margin-top: 100px;
+    background-color: #fc5425;
+    text-align: center;
+    border-radius: 5px; }
+  .contact__box {
+    width: 250px;
+    height: 40px;
+    float: left;
+    margin-left: 25px;
+    margin-top: 25px;
+    background-color: white;
+    border-radius: 5px; }
+  .contact__bigBox {
+    width: 250px;
+    height: 130px;
+    float: left;
+    margin-left: 25px;
+    margin-top: 25px;
+    background-color: white;
+    border-radius: 5px; }
+  .contact__containerLeftText {
+    width: 440px;
+    height: 200px;
+    float: left;
+    background-color: gainsboro;
+    margin-left: 10px; }
+  .contact__containerLeftImg {
+    width: 440px;
+    height: 200px;
+    float: left;
+    background-color: white; }
+  .contact__text1 {
+    width: 430px;
+    height: 160px;
+    float: left;
+    margin-top: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: black; }
+  .contact__image {
+    width: 100px;
+    height: 100px;
+    float: left;
+    background-color: red;
+    margin-top: 50px;
+    margin-left: 60px;
+    margin-right: 10px; }
+
+.contactB {
+  width: 150px;
+  height: 40px;
+  float: left;
+  margin-left: 75px;
+  margin-top: 25px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  color: red;
+  font-family: sans-serif; }
