--- a/src/sass/square.css
+++ b/src/sass/square.css
@@ -419,3 +419,70 @@
   cursor: pointer;
   color: red;
   font-family: sans-serif; }
+
+.bottom {
+  width: 1450px;
+  height: 600px;
+  float: left;
+  background-color: white;
+  margin-left: 150px; }
+  .bottom__container {
+    width: 300px;
+    height: 500px;
+    float: left;
+    margin-left: 50px;
+    margin-top: 50px;
+    background-color: white; }
+  .bottom__title {
+    width: 300px;
+    height: 100px;
+    float: left;
+    background-color: white;
+    font-family: 'Anton', sans-serif;
+    font-size: 40px;
+    text-align: left;
+    border-bottom: 5px solid red; }
+  .bottom__text {
+    width: 300px;
+    height: 100px;
+    float: left;
+    background-color: white;
+    opacity: 0.8;
+    font-family: sans-serif;
+    font-size: 15px; }
+  .bottom__imgmargin {
+    width: 80px;
+    height: 80px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 30px;
+    background-color: gray; }
+  .bottom__imgtop {
+    width: 80px;
+    height: 80px;
+    float: left;
+    margin-top: 30px;
+    background-color: gray; }
+  .bottom__imgbig {
+    width: 130px;
+    height: 100px;
+    float: left;
+    background-color: gray;
+    margin-top: 30px; }
+  .bottom__imgtext {
+    width: 170px;
+    height: 100px;
+    float: left;
+    margin-top: 30px;
+    background-color: white;
+    font-size: 18px;
+    opacity: 0.8;
+    font-family: sans-serif; }
+  .bottom__text1 {
+    width: 300px;
+    height: 170px;
+    float: left;
+    background-color: white;
+    opacity: 0.8;
+    font-family: sans-serif;
+    font-size: 15px; }
