--- a/src/sass/square.scss
+++ b/src/sass/square.scss
@@ -488,3 +488,80 @@
     color: red;
     font-family: sans-serif;
 }
+
+.bottom{
+    width: 1450px;
+    height: 600px;
+    float: left;
+    background-color: white;
+    margin-left: 150px;
+
+    &__container{
+        width: 300px;
+        height: 500px;
+        float: left;
+        margin-left: 50px;
+        margin-top: 50px;
+        background-color: white;
+    }
+    &__title{
+        width: 300px;
+        height: 100px;
+        float: left;
+        background-color: white;
+        font-family: 'Anton', sans-serif;
+        font-size: 40px;
+        text-align: left;
+        border-bottom: 5px solid red;
+    }
+    &__text{
+        width: 300px;
+        height: 100px;
+        float: left;
+        background-color: white;
+        opacity: 0.8;
+        font-family: sans-serif;
+        font-size: 15px;
+    }
+    &__imgmargin{
+        width: 80px;
+        height: 80px;
+        float: left;
+        margin-top: 30px;
+        margin-left: 30px;
+        background-color: gray;
+    }
+    &__imgtop{
+        width: 80px;
+        height: 80px;
+        float: left;
+        margin-top: 30px;
+        background-color: gray;
+    }
+    &__imgbig{
+        width: 130px;
+        height: 100px;
+        float: left;
+        background-color: gray;
+        margin-top: 30px;
+    }
+    &__imgtext{
+        width: 170px;
+        height: 100px;
+        float: left;
+        margin-top: 30px;
+        background-color: white;
+        font-size: 18px;
+        opacity: 0.8;
+        font-family: sans-serif;
+    }
+    &__text1{
+        width: 300px;
+        height: 170px;
+        float: left;
+        background-color: white;
+        opacity: 0.8;
+        font-family: sans-serif;
+        font-size: 15px;
+    }
+}
